Progress on paper draft.

--- a/math/latex_macros_gp_inv_prob.tex
+++ b/math/latex_macros_gp_inv_prob.tex
@@ -44,9 +44,11 @@
 
 % Log-likelihood and forward model emulators. 
 \newcommand{\funcEm}[1][]{\func_{#1}}
-\newcommand{\llikEm}[2][]{#1_{#2}}
-\newcommand{\emMean}[2][]{\mu^{#1}_{#2}}
-\newcommand{\emKer}[2][]{k^{#1}_{#2}}
+\newcommand{\fwdEm}[1][]{\fwd_{#1}}
+\newcommand{\llikEm}[1][]{\llik_{#1}} 
+\newcommand{\llikEmFwd}[1][]{\llik^{\fwd}_{#1}}
+\newcommand{\emMean}[2][]{\mu^{#2}_{#1}} % First argument is number of design points, second is the function being emulated. 
+\newcommand{\emKer}[2][]{k^{#2}_{#1}}
 
 % Design. 
 \newcommand{\Ndesign}{N}
