Progress on background section for paper.

--- a/math/latex_macros_gp_inv_prob.tex
+++ b/math/latex_macros_gp_inv_prob.tex
@@ -62,6 +62,12 @@
 \newcommand{\designBatchLlik}{\ell_{\NBatch}}
 \newcommand{\designBatchFwd}{g_{\NBatch}}
 
+% Basis function emulation. 
+\newcommand{\basisVec}{\phi}
+\newcommand{\basisWeight}{w}
+\newcommand{\dimBasis}{R}
+\newcommand{\idxBasis}{r}
+
 % --------------------------------------------------------------------------------------------------
 % Markov Chain Monte Carlo. 
 % --------------------------------------------------------------------------------------------------
