--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -20,13 +20,38 @@ journal = {Bayesian Analysis},
 doi = {10.1214/09-BA404}
 }
 
+@book{gramacy2020surrogates,
+  title = {Surrogates: {G}aussian Process Modeling, Design and \
+    Optimization for the Applied Sciences},
+  author = {Robert B. Gramacy},
+  publisher = {Chapman Hall/CRC},
+  address = {Boca Raton, Florida},
+  note = {\url{http://bobby.gramacy.com/surrogates/}},
+  year = {2020}
+}
+
+@article{design_analysis_computer_experiments,
+author = {Jerome Sacks and William J. Welch and Toby J. Mitchell and Henry P. Wynn},
+title = {{Design and Analysis of Computer Experiments}},
+volume = {4},
+journal = {Statistical Science},
+number = {4},
+publisher = {Institute of Mathematical Statistics},
+pages = {409 -- 423},
+keywords = {computer-aided design, Experimental design, kriging, response surface, spatial statistics},
+year = {1989},
+doi = {10.1214/ss/1177012413},
+URL = {https://doi.org/10.1214/ss/1177012413}
+}
+
+
 
 %  ---------------------------------------------------------------------------------------------------
 % Log-Likelihood (or unnormalized log posterior) emulation with GPs
 %  ---------------------------------------------------------------------------------------------------
 
 % Emulate the likelihood. Propose a GP-accelerated MCMC scheme that tries to sample trajectories from the GP. 
-@article{LEBEL2019158,
+@article{trainDynamics,
 title = {Statistical inverse identification for nonlinear train dynamics using a surrogate model in a Bayesian framework},
 journal = {Journal of Sound and Vibration},
 volume = {458},
@@ -42,7 +67,7 @@ abstract = {This paper presents a Bayesian calibration method for a simulation-b
 
 % Emulate unnormalized log posterior. Use delayed-acceptance HMC. GP only used for proposal, exact posterior used for acceptance ratio. Uses GP classifier
 % to find regions of parameter space where physical assumptions are violated. Adapt HMC parameters using BayesOpt. 
-@article{https://doi.org/10.1002/cnm.3421,
+@article{MCMC_GP_proposal,
 author = {Paun, L. Mihaela and Husmeier, Dirk},
 title = {Markov chain Monte Carlo with Gaussian processes for fast parameter estimation and uncertainty quantification in a 1D fluid-dynamics model of the pulmonary circulation},
 journal = {International Journal for Numerical Methods in Biomedical Engineering},
@@ -60,7 +85,7 @@ year = {2021}
 % Utilize a plug-in estimator for the likelihood which computes a quantile of the emulator distribution, the idea being that something like the 90th percentile represents 
 % a conservative estimate of the true likelihood. They also incorporate bound constraints to account for the fact that they are emulating a non-negative quantity (in their 
 % case, the unnormalized log Gaussian likelihood). 
-@misc{dinkel2023solving,
+@misc{quantileApprox,
       title={Solving Bayesian Inverse Problems With Expensive Likelihoods Using Constrained Gaussian Processes and Active Learning}, 
       author={Maximilian Dinkel and Carolin M. Geitner and Gil Robalo Rei and Jonas Nitzler and Wolfgang A. Wall},
       year={2023},
@@ -70,7 +95,7 @@ year = {2021}
 }
 
 % Emulate log-posterior. 
-@article{doi:10.1198/106186008X320681,
+@article{llikRBF,
 author = {Nikolay Bliznyuk and David Ruppert and Christine Shoemaker and Rommel Regis and Stefan Wild and Pradeep Mugunthan},
 title = {Bayesian Calibration and Uncertainty Analysis for Computationally Expensive Models Using Optimization and Radial Basis Function Approximation},
 journal = {Journal of Computational and Graphical Statistics},
@@ -83,6 +108,39 @@ doi = {10.1198/106186008X320681},
 URL = {https://doi.org/10.1198/106186008X320681},
 eprint = { https://doi.org/10.1198/106186008X320681}
 }
+
+% Bayesian quadrature. Emulate log-integrand with GP. 
+@inproceedings{BayesQuadrature,
+ author = {Osborne, Michael and Garnett, Roman and Ghahramani, Zoubin and Duvenaud, David K and Roberts, Stephen J and Rasmussen, Carl},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {F. Pereira and C.J. Burges and L. Bottou and K.Q. Weinberger},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Active Learning of Model Evidence Using Bayesian Quadrature},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2012/file/6364d3f0f495b6ab9dcf8d3b5c6e0b01-Paper.pdf},
+ volume = {25},
+ year = {2012}
+}
+
+% Bayesian quadrature for ratios
+@InProceedings{BayesQuadRatios,
+  title = 	 {Bayesian Quadrature for Ratios},
+  author = 	 {Osborne, Michael and Garnett, Roman and Roberts, Stephen and Hart, Christopher and Aigrain, Suzanne and Gibson, Neale},
+  booktitle = 	 {Proceedings of the Fifteenth International Conference on Artificial Intelligence and Statistics},
+  pages = 	 {832--840},
+  year = 	 {2012},
+  editor = 	 {Lawrence, Neil D. and Girolami, Mark},
+  volume = 	 {22},
+  series = 	 {Proceedings of Machine Learning Research},
+  address = 	 {La Palma, Canary Islands},
+  month = 	 {21--23 Apr},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v22/osborne12/osborne12.pdf},
+  url = 	 {https://proceedings.mlr.press/v22/osborne12.html},
+  abstract = 	 {We describe a novel approach to quadrature for ratios of probabilistic integrals, such as are used to compute posterior probabilities. It offers performance superior to Monte Carlo methods by exploiting a Bayesian quadrature framework. We improve upon previous Bayesian quadrature techniques by explicitly modelling the non-negativity of our integrands, and the correlations that exist between them. It offers most where the integrand is multi-modal and expensive to evaluate, as is commonplace in exoplanets research; we demonstrate the efficacy of our method on data from the Kepler spacecraft.}
+}
+
+
 
 
 %  ---------------------------------------------------------------------------------------------------
@@ -201,7 +259,8 @@ year = {2021}
       primaryClass={stat.ML}
 }
 
-% TODO: need to re-read
+% Solving optimization problem. Emulate the log Euclidean error of a simulator with time-series output using BART. 
+% Expected improvement sequential design. 
 @misc{ranjan2016inverse,
       title={Inverse problem for time-series valued computer model via scalarization}, 
       author={Pritam Ranjan and Mark Thomas and Holger Teismann and Sujay Mukhoti},
@@ -225,6 +284,45 @@ year = {2021}
 	journal = {Journal of Computational Physics}
 }
 
+% Log-likelihood emulation. Sequential design using entropy of lognormal likelihood approx. They mention plugging 
+ % in approx to the density and running MCMC but don't explain how. 
+@article{landslideCalibration,
+	doi = {https://doi.org/10.1007/s10346-022-01857-z},
+	url = {https://doi.org/10.1007/s10346-022-01857-z},  
+	year = 2022,
+	month = {April},  
+	volume = {19},  
+	pages = {2033–2045},  
+	author = {Zhao, H., Kowalski, J. Bayesian},  
+	title = {Bayesian active learning for parameter calibration of landslide run-out models.},  
+	journal = {Landslides}
+}
+
+% Unnormalized log-posterior emulation. Sequential design using exponentiated variance and negative expected 
+% divergence. The latter is typically computationally intractable. 
+@article{Kandasamy_2017,
+   title={Query efficient posterior estimation in scientific experiments via Bayesian active learning},
+   volume={243},
+   ISSN={0004-3702},
+   url={http://dx.doi.org/10.1016/j.artint.2016.11.002},
+   DOI={10.1016/j.artint.2016.11.002},
+   journal={Artificial Intelligence},
+   publisher={Elsevier BV},
+   author={Kandasamy, Kirthevasan and Schneider, Jeff and Póczos, Barnabás},
+   year={2017},
+   month=feb, pages={45–56} }
+
+% Requires density estimation. Propose an approach to deal with fast-varying densities that may not be conducive 
+% to GP modeling. Active learning approach maximizing the log-normal entropy (entropy of unnormalized log-posterior
+% emulator. 
+@misc{wang2018adaptive,
+      title={Adaptive Gaussian process approximation for Bayesian inference with expensive likelihood functions}, 
+      author={Hongqiao Wang and Jinglai Li},
+      year={2018},
+      eprint={1703.09930},
+      archivePrefix={arXiv},
+      primaryClass={stat.CO}
+}
 
 
 % ---------------------------------------------------------------------------------------------------
@@ -232,7 +330,7 @@ year = {2021}
 % ---------------------------------------------------------------------------------------------------
 
 % Higdon et al PCA basis function approach to high-dim outputs. 
-@article{Higdon,
+@article{HigdonBasis,
 author = {Dave Higdon and James Gattiker and Brian Williams and Maria Rightley},
 title = {Computer Model Calibration Using High-Dimensional Output},
 journal = {Journal of the American Statistical Association},
@@ -243,26 +341,6 @@ year  = {2008},
 publisher = {Taylor & Francis},
 doi = {10.1198/016214507000000888},
 URL = {   
-        https://doi.org/10.1198/016214507000000888
-},
-eprint = { 
-    
-        https://doi.org/10.1198/016214507000000888
-}
-}
-
-% TODO: need to read 
-@article{doi:10.1198/016214507000000888,
-author = {Dave Higdon and James Gattiker and Brian Williams and Maria Rightley},
-title = {Computer Model Calibration Using High-Dimensional Output},
-journal = {Journal of the American Statistical Association},
-volume = {103},
-number = {482},
-pages = {570-583},
-year  = {2008},
-publisher = {Taylor & Francis},
-doi = {10.1198/016214507000000888},
-URL = {    
         https://doi.org/10.1198/016214507000000888
 },
 eprint = { 
@@ -286,15 +364,40 @@ doi = {10.1214/009053607000000163},
 URL = {https://doi.org/10.1214/009053607000000163}
 }
 
+% Emulate coefficients in KL expansion, then use delayed-acceptance MCMC. 
+@Article{functionValuedModels,
+AUTHOR = {Albert, Christopher G. and Callies, Ulrich and Toussaint, Udo von},
+TITLE = {Surrogate-Enhanced Parameter Inference for Function-Valued Models},
+JOURNAL = {Physical Sciences Forum},
+VOLUME = {3},
+YEAR = {2021},
+NUMBER = {1},
+ARTICLE-NUMBER = {11},
+URL = {https://www.mdpi.com/2673-9984/3/1/11},
+ISSN = {2673-9984},
+ABSTRACT = {We present an approach to enhance the performance and flexibility of the Bayesian inference of model parameters based on observations of the measured data. Going beyond the usual surrogate-enhanced Monte-Carlo or optimization methods that focus on a scalar loss, we place emphasis on a function-valued output of a formally infinite dimension. For this purpose, the surrogate models are built on a combination of linear dimensionality reduction in an adaptive basis of principal components and Gaussian process regression for the map between reduced feature spaces. Since the decoded surrogate provides the full model output rather than only the loss, it is re-usable for multiple calibration measurements as well as different loss metrics and, consequently, allows for flexible marginalization over such quantities and applications to Bayesian hierarchical models. We evaluate the method&rsquo;s performance based on a case study of a toy model and a simple riverine diatom model for the Elbe river. As input data, this model uses six tunable scalar parameters as well as silica concentrations in the upper reach of the river together with the continuous time-series of temperature, radiation, and river discharge over a specific year. The output consists of continuous time-series data that are calibrated against corresponding measurements from the Geesthacht Weir station at the Elbe river. For this study, only two scalar inputs were considered together with a function-valued output and compared to an existing model calibration using direct simulation runs without a surrogate.},
+DOI = {10.3390/psf2021003011}
+}
+
+% Use proper orthogonal decomposition
+@article{PODemulation,
+author = {Yeh, Shiang-Ting and Wang, Xingjian and Sung, Chih-Li and Mak, Simon and Chang, Yu-Hung and Zhang, Liwei and Wu, Chi-Fang and Yang, Vigor},
+year = {2017},
+month = {07},
+pages = {},
+title = {Data-Driven Analysis and Common Proper Orthogonal Decomposition (CPOD)-Based Spatio-Temporal Emulator for Design Exploration}
+}
+
+
 
 % ---------------------------------------------------------------------------------------------------
 % Other emulation techniques for dynamical models. 
 % ---------------------------------------------------------------------------------------------------
 
 % TODO: need to read
-@article{MOHAMMADI2019178,
+@article{dynamic_nonlinear_simulators_GP,
 title = {Emulating dynamic non-linear simulators using Gaussian processes},
-journal = {Computational Statistics & Data Analysis},
+journal = {Computational Statistics \& Data Analysis},
 volume = {139},
 pages = {178-196},
 year = {2019},
@@ -377,13 +480,28 @@ URL = {https://doi.org/10.1214/09-BA415}
 % ---------------------------------------------------------------------------------------------------
 
 % Integrated variance criterion targeting the GP directly, but weighted by the approx posterior; accompanying theory, 
-@misc{lartaud2024sequential,
+@misc{weightedIVAR,
       title={Sequential design for surrogate modeling in Bayesian inverse problems}, 
       author={Paul Lartaud and Philippe Humbert and Josselin Garnier},
       year={2024},
       eprint={2402.16520},
       archivePrefix={arXiv},
       primaryClass={stat.ME}
+}
+
+% Log-likelihood emulation with IEVAR criterion. Marginal posterior approximation. 
+@article{VehtariParallelGP,
+author = {Marko J{\"a}rvenp{\"a}{\"a} and Michael U. Gutmann and Aki Vehtari and Pekka Marttinen},
+title = {{Parallel Gaussian Process Surrogate Bayesian Inference with Noisy Likelihood Evaluations}},
+volume = {16},
+journal = {Bayesian Analysis},
+number = {1},
+publisher = {International Society for Bayesian Analysis},
+pages = {147 -- 178},
+keywords = {expensive likelihoods, Gaussian processes, likelihood-free inference, parallel computing, sequential experiment design, surrogate modelling},
+year = {2021},
+doi = {10.1214/20-BA1200},
+URL = {https://doi.org/10.1214/20-BA1200}
 }
 
 % Propose gradient-based optimization for sample-sum approximation of IVAR. 
@@ -566,23 +684,6 @@ eprint = {
 },
     abstract = { We develop Bayesian dynamic linear model Gaussian processes for emulation of time series output for computer models that may exhibit chaotic behavior, but where this behavior retains some underlying structure. The statistical technology is particularly suited to emulating the time series output of large climate models that exhibit this feature and where we want samples from the posterior of the emulator to evolve in the same way as dynamic processes in the computer model do. The methodology combines key features of good uncertainty quantification (UQ) methods such as using complex mean functions to capture large-scale signals within parameter space, with dynamic linear models in a way that allows UQ to borrow strength from the Bayesian time series literature. We present an MCMC algorithm for sampling from the posterior of the emulator parameters when the roughness lengths of the Gaussian process are unknown. We discuss an interpretation of the results of this algorithm that allows us to use MCMC to fix the correlation lengths, making future online samples from the emulator tractable when used in practical applications where online MCMC is infeasible. We apply this methodology to emulate the Atlantic Meridional Overturning Circulation (AMOC) as a time series output of the fully coupled non--flux-adjusted atmosphere-ocean general circulation model HadCM3. }
 }
-
-% Emulate coefficients in KL expansion, then use delayed-acceptance MCMC. 
-@Article{psf2021003011,
-AUTHOR = {Albert, Christopher G. and Callies, Ulrich and Toussaint, Udo von},
-TITLE = {Surrogate-Enhanced Parameter Inference for Function-Valued Models},
-JOURNAL = {Physical Sciences Forum},
-VOLUME = {3},
-YEAR = {2021},
-NUMBER = {1},
-ARTICLE-NUMBER = {11},
-URL = {https://www.mdpi.com/2673-9984/3/1/11},
-ISSN = {2673-9984},
-ABSTRACT = {We present an approach to enhance the performance and flexibility of the Bayesian inference of model parameters based on observations of the measured data. Going beyond the usual surrogate-enhanced Monte-Carlo or optimization methods that focus on a scalar loss, we place emphasis on a function-valued output of a formally infinite dimension. For this purpose, the surrogate models are built on a combination of linear dimensionality reduction in an adaptive basis of principal components and Gaussian process regression for the map between reduced feature spaces. Since the decoded surrogate provides the full model output rather than only the loss, it is re-usable for multiple calibration measurements as well as different loss metrics and, consequently, allows for flexible marginalization over such quantities and applications to Bayesian hierarchical models. We evaluate the method&rsquo;s performance based on a case study of a toy model and a simple riverine diatom model for the Elbe river. As input data, this model uses six tunable scalar parameters as well as silica concentrations in the upper reach of the river together with the continuous time-series of temperature, radiation, and river discharge over a specific year. The output consists of continuous time-series data that are calibrated against corresponding measurements from the Geesthacht Weir station at the Elbe river. For this study, only two scalar inputs were considered together with a function-valued output and compared to an existing model calibration using direct simulation runs without a surrogate.},
-DOI = {10.3390/psf2021003011}
-}
-
-
 
 
 @article{doi:10.1080/00401706.2013.775897,
